# gdext-rust

./: .gitignore  .gitmodules
gdext-builtin/src/: lib.rs  packed_byte_array.rs  string.rs  variant.rs
gdext-class/src/: lib.rs  macros.rs  property_info.rs  ref_counted.rs
gdext-codegen/: Cargo.toml  binding_generator.py  build.rs  codgen.py
gdext-sys/: build.rs
test-project/: Main.tscn
test-project/native/: Cargo.toml
test-project/native/src/: lib.rs
