[package]
name = "gdext-codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdext-sys = { path = "../gdext-sys" }
gdext-builtin = { path = "../gdext-builtin" }
once_cell = "1.8"
bitflags = "1.3.2"

#[build-dependencies]
#pyo3 = "0.16.2"